Fixing 'cancel' width on mobile

--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ main p{
     font-size: 1em;
     cursor: pointer;
     transition: 0.2s;
+    border: 2px solid black;
 }
 
 /* ATTRIBUTION */
@@ -190,5 +191,9 @@ main p{
 
     .attribution{
         display: none;
+    }
+
+    .cancel{
+        width: 60%;
     }
 }
